<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 GcsSloop
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified 2017-03-25 02:42:10
  ~
  ~ GitHub:  https://github.com/GcsSloop
  ~ Website: http://www.gcssloop.com
  ~ Weibo:   http://weibo.com/GcsSloop
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gcssloop.diycode.activity.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/about_diycode_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/about_diycode_desc"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="10dp"
                android:background="@color/diy_white_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/about_me_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/my_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/about_me_desc"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/feed_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/my_desc"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="点击此处告状"
                    android:textSize="10sp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="10dp"
                android:background="@color/diy_white_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/about_father"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:text="@string/about_father_desc"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="12dp"
                android:background="@color/diy_white_bg"/>

            <RelativeLayout
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/about_sloop"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/image"
                    android:gravity="center"
                    android:text="GcsSloop"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/image"
                    android:gravity="center"
                    android:text="一位生活在 2.5 次元的魔法师。"
                    android:textSize="12sp"
                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/diy_white_bg"/>

            <TextView
                android:id="@+id/contribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="¥ 捐赠一杯咖啡"
                android:textColor="#4AC432"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/diy_white_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="License"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/about_license_desc"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/diy_white_bg"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="12dp"
                android:text="-- diycode --"/>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
